<resources>
    <string name="app_name">PPTIK Academy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilebtn">Profile</string>
    <string name="secirtybtn"><![CDATA[Sign in & security]]></string>
    <string name="helpbtn">Help</string>
    <string name="logoutbtn">Logout</string>
    <string name="contactusbtn">Contact us</string>
    <string name="aboutybtn">About</string>
</resources>
