<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackWhite"
    tools:context=".AccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"

        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textToolbarAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_account"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:width="@android:dimen/thumbnail_width"
        android:gravity="center_horizontal"
        android:text="Account"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorTextWhite"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:textStyle="bold" />

    <ImageView
        android:id="@+id/profileimg"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@+id/profilebutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profilebutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:fontFamily="serif"
        android:text="@string/profilebtn"
        android:textAllCaps="false"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textToolbarAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_account"
        app:layout_constraintVertical_bias="0.045" />

    <ImageView
        android:id="@+id/securityimg"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/security"
        app:layout_constraintEnd_toStartOf="@+id/securitybutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileimg" />

    <Button
        android:id="@+id/securitybutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="169dp"
        android:layout_height="47dp"
        android:fontFamily="serif"
        android:text="@string/secirtybtn"
        android:textAllCaps="false"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textToolbarAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilebutton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/helpimg"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/help"
        app:layout_constraintEnd_toStartOf="@+id/helpbutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securityimg" />

    <Button
        android:id="@+id/helpbutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="67dp"
        android:layout_height="46dp"
        android:fontFamily="serif"
        android:text="@string/helpbtn"
        android:textAllCaps="false"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textToolbarAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/securitybutton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoutimg"
        android:layout_width="25dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toStartOf="@+id/logoutbutton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpimg" />

    <Button
        android:id="@+id/logoutbutton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/logoutbtn"
        android:textAllCaps="false"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/textToolbarAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpbutton"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>